render text as markdown

--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 + comments
++ markdown for rendering abstract and comments
 
-* markdown for rendering abstract and comments
 * participating
 * talk date
